--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "micromark-extension-mdxjs": "^1.0.0",
     "next": "13.2.4",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "sse.js": "^0.6.1",
     "tailwind-merge": "^1.10.0",
     "tailwindcss-animate": "^1.0.5",
@@ -58,6 +60,7 @@
     "@types/common-tags": "^1.8.1",
     "@types/estree": "^1.0.0",
     "@types/mdast": "^3.0.11",
+    "@types/pdf-parse": "^1.1.1",
     "@types/yargs": "^17.0.24",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
